--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="col-lg-6 d-lg-block mt-3 d-none text-end">
-                <img src="/Image/Banner/home-right.png" alt="" width="70%">
+                <img src="/Image/Banner/home-right.png" alt="home-right-img" width="70%">
             </div>
         </div>
     </header>
