--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <!-- **********************************Section 4******************************************* -->
 
     <section id="contact">
-        <div class="container justify-content-center align-items-center d-flex flex-column mt-5 pb-5 w-50">
+        <div class="container justify-content-center align-items-center d-flex flex-column mt-5 pb-5 col-lg-6 col-sm-12 col-12">
             <h1 class="linear-gradient-text fw-bold">CONTACT WITH ME</h1>
             <div class="card mt-5">
                 <img src="Image/contact1.png" class="card-img-top" alt="...">
