--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <p class="card-text">A Freelancer</p>
                     <p class="card-text">I am available for freelance work. Connect with me via Email or call in to my
                         account.</p>
-                    <p class="card-text">Email: <span>amrutpankuta@gmail.com</span></p>
+                    <p class="card-text">Email: <span><a href="mailto:amrutpankta@gmail.com" target="_blank" class="text-decoration-none">amrutpankuta@gmail.com</a></span></p>
                     <p class="card-text">Find Me</p>
                     <div class="">
                         <a href="https://www.instagram.com/amrut_rabari_6334?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
