--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <a href="Image/Download/Amrut_Frontend_Developer-1.pdf (1).pdf" download><button class=" btn2 fs-3">GET CV</button></a>
                 </div>
             </div>
-            <div class="col-lg-6 d-lg-block mt-3 d-none text-end">
+            <div class="col-lg-6 text-center text-lg-end d-lg-block mt-3 d-none text-end">
                 <img src="/Image/Banner/home-right.png" alt="home-right-img" width="70%">
             </div>
         </div>
