--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- **********************************Section 1******************************************* -->
     <section class="container" id="about">
         <div class="row mt-5">
-            <div class="col-lg-6  d-lg-block"><img src="Image/about-us.png" alt="" width="80%"></div>
+            <div class="col-lg-6  text-center text-lg-start"><img src="Image/about-us.png" alt="" width="80%"></div>
             <div
                 class="col-lg-6 col-md-12 col-sm-12 col-12 align-items-center d-flex flex-column justify-content-center">
                 <h1 class=" text-center text-lg-start fw-bold">LET’S INTRODUCE ABOUT MYSELF</h1>
