--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <div>
             <h1 class="text-center linear-gradient-text fw-bold">PROJECTS</h1>
             <div class="mt-5 d-lg-flex  p-2 justify-content-around">
-                <a href="https://github.com/amrut6334/FreshCart" class="text-decoration-none justify-content-center d-flex" target="_blank"
+                <a href="https://github.com/amrut6334/FreshCart" title="GitHub Link" class="text-decoration-none justify-content-center d-flex" target="_blank"
                     style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
                         <img src="Image/freshcart-logo.png" class="card-img-top" alt="...">
@@ -110,7 +110,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/amrut6334/Cycle-Store-Project" target="_blank"
+                <a href="https://github.com/amrut6334/Cycle-Store-Project" title="GitHub Link" target="_blank"
                     class="text-decoration-none justify-content-center d-flex mt-5 mt-lg-0" style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
                         <img src="Image/logo.png" class="card-img-top" alt="... ">
@@ -118,7 +118,7 @@
                     </div>
                 </a>
 
-                <a href="https://github.com/amrut6334/Internet-Research-Studio" target="_blank"
+                <a href="https://github.com/amrut6334/Internet-Research-Studio" title="GitHub Link" target="_blank"
                     class="text-decoration-none justify-content-center d-flex mt-5 mt-lg-0" style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
                         <img src="Image/internet_favicon.png" class="card-img-top" alt="... " style="max-width: 50%;">
