--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div><i class="fa-solid fa-phone section_2_icn justify-content-center align-items-center d-flex "></i>
                 </div>
                 <div class="section_2_left text-center mt-4">
-                    <p class="">CALL US NOW</p>
+                    <a href="tel:8758819679" title="GitHub Link" class="text-decoration-none> <p>CALL US NOW</p></a>
                     <p class="text-black fw-bold ">+91 87588 19679</p>
                 </div>
             </div>
