--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <h1 class="col-lg-1 text-center">Month Experience Working</h1>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-lg-flex align-items-center justify-content-center">
-                <div><i class="fa-solid fa-phone section_2_icn justify-content-center align-items-center d-flex "></i>
+                <div><a href="tel:8758819679" class="text-decoration-none"><i class="fa-solid fa-phone section_2_icn justify-content-center align-items-center d-flex "></i> </a>
                 </div>
                <div class="section_2_left text-center mt-4">
-                    <a href="tel:8758819679" class="text-decoration-none">
+                    
                         <p class="call">CALL US NOW</p>
                         <p class="text-black fw-bold ">+91 87588 19679</p>
-                    </a>
+                        
                 </div>
             </div>
         </div>
