--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h1 class="col-lg-1 text-center">Month Experience Working</h1>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 col-12 d-lg-flex align-items-center justify-content-center">
-                <div><a href="tel:8758819679" class="text-decoration-none"><i class="fa-solid fa-phone section_2_icn justify-content-center align-items-center d-flex "></i> </a>
+                <div><a href="tel:8758819679" class="text-decoration-none"><i class="fa-solid fa-phone section_2_icn justify-content-center align-items-center text-black d-flex "></i> </a>
                 </div>
                <div class="section_2_left text-center mt-4">
                     
