--- a/index.html
+++ b/index.html
@@ -100,33 +100,45 @@
 
     <!-- *********************************section project****************************************** -->
 
-    <section class="container mt-3" id="project">
+     <section class="container mt-3" id="project">
         <div>
             <h1 class="text-center linear-gradient-text fw-bold">PROJECTS</h1>
             <div class="mt-5 d-lg-flex  p-2 justify-content-around">
-                <a href="https://github.com/amrut6334/FreshCart" title="GitHub Link" class="text-decoration-none justify-content-center d-flex" target="_blank"
-                    style="height: 16rem;">
+                <div class=" justify-content-center  d-flex" style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
-                        <img src="Image/freshcart-logo.png" class="card-img-top" alt="...">
+                        <img src="Image/freshcart-logo.png" class="card-img-top " alt="...">
                         <h5 class="text-black mt-3">FreshCart</h5>
+                        <button class="btn_dow mt-2"><a href="https://github.com/amrut6334/FreshCart"
+                                class="text-decoration-none text-white" title="GitHub Link">GitHub</a></button>
                     </div>
-                </a>
+                </div>
 
-                <a href="https://github.com/amrut6334/Cycle-Store-Project" title="GitHub Link" target="_blank"
-                    class="text-decoration-none justify-content-center d-flex mt-5 mt-lg-0" style="height: 16rem;">
+                <div class=" justify-content-center  d-flex mt-5 mt-lg-0" style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
-                        <img src="Image/logo.png" class="card-img-top" alt="... ">
+                        <img src="Image/logo.png" class="card-img-top" alt="... " style="max-width: 50%;">
                         <h5 class="text-black mt-3">Cycle Store</h5>
+                        <button class="btn_dow mt-2"><a href="https://github.com/amrut6334/Cycle-Store-Project"
+                                class="text-decoration-none text-white" title="GitHub Link">GitHub</a></button>
                     </div>
-                </a>
+                </div>
 
-                <a href="https://github.com/amrut6334/Internet-Research-Studio" title="GitHub Link" target="_blank"
-                    class="text-decoration-none justify-content-center d-flex mt-5 mt-lg-0" style="height: 16rem;">
+                <div class=" justify-content-center  d-flex mt-5 mt-lg-0" style="height: 16rem;">
                     <div class="card-project text-center" style="width: 18rem;">
-                        <img src="Image/internet_favicon.png" class="card-img-top" alt="... " style="max-width: 50%;">
+                        <img src="Image/internet_favicon.png" class="card-img-top" alt="... " style="max-width: 15%;">
                         <h5 class="text-black mt-3">Internet Research Studio</h5>
+                        <button class="btn_dow mt-2"><a href="https://github.com/amrut6334/Internet-Research-Studio"
+                                class="text-decoration-none text-white" title="GitHub Link">GitHub</a></button>
                     </div>
-                </a>
+                </div>
+
+                <div class=" justify-content-center d-flex mt-5 mt-lg-0" style="height: 16rem;">
+                    <div class="card-project text-center" style="width: 18rem;">
+                        <img src="Image/Logo-Pizza-Hut 2.png" class="card-img-top" alt="... " style="max-width: 50%;">
+                        <h5 class="text-black mt-3">Pizza Hut</h5>
+                        <button class="btn_dow mt-2"><a href="#"
+                                class="text-decoration-none text-white" title="GitHub Link">Coming Soon</a></button>
+                    </div>
+                </div>
 
             </div>
         </div>
